Finalização do OpenAPI
